[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes_and_scripts/Enemies/Enemy_base.gd" type="Script" id=1]

[node name="Enemy_base" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 518
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]

[node name="HealthBar" type="ProgressBar" parent="."]
visible = false
margin_right = 85.0
margin_bottom = 14.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar_timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Knockback_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="Line2D" type="Line2D" parent="."]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="HealthBar_timer" to="." method="_on_HealthBar_timer_timeout"]
[connection signal="timeout" from="Knockback_timer" to="." method="_on_Knockback_timer_timeout"]
